--- a/Week10/Lab8.ipynb
+++ b/Week10/Lab8.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Lab 8 - File I/O and Frankenstein\n",
-    "### Name:\n",
+    "### Name:Jonathan Welch \n",
     "This lab is designed to give you practice with file I/O and to give you a chance to work with a larger program.  You will be writing a program that will read in a text file and then create a new file that is a modified version of the original.  The program will then read in the modified file and print out some statistics about the file."
    ]
   },
@@ -17,7 +17,9 @@
    "source": [
     "# Take in the Frankenstein text using open and read\n",
     "# Open the file\n",
-    "\n"
+    "with open(\"Frankenstein.txt\", \"r\") as file:\n",
+    "    # Read the file\n",
+    "    text = file.read()\n"
    ]
   },
   {
@@ -27,7 +29,9 @@
    "outputs": [],
    "source": [
     "# Show the start of the file (first 1000 characters)\n",
-    "# Note: Use slicing to get the first 1000 characters\n"
+    "# Note: Use slicing to get the first 1000 characters\n",
+    "test = text[:1000]\n",
+    "print(test)\n"
    ]
   },
   {
@@ -40,7 +44,9 @@
     "# Note: Use slicing to get the last 1000 characters\n",
     "#  H  E  L  L  O\n",
     "#  0  1  2  3  4\n",
-    "# -5 -4 -3 -2 -1\n"
+    "# -5 -4 -3 -2 -1\n",
+    "tail = text[-1000:]\n",
+    "print(tail)"
    ]
   },
   {
@@ -62,10 +68,12 @@
     "\n",
     "\n",
     "def remove_gutenberg_header_footer(text):\n",
-    "\n",
+    "    start = text.find(\"*** START OF THE PROJECT GUTENBERG EBOOK FRANKENSTEIN; OR, THE MODERN PROMETHEUS ***\")\n",
+    "    end = text.find(\"*** END OF THE PROJECT GUTENBERG EBOOK FRANKENSTEIN; OR, THE MODERN PROMETHEUS ***\")\n",
+    "    return text[start:end]\n",
     "\n",
     "# Call the remove_gutenberg_header_footer method with the text and save the result to a variable called text\n",
-    "\n"
+    "fixed_texted=remove_gutenberg_header_footer(text)\n"
    ]
   },
   {
@@ -81,25 +89,35 @@
     "# Note: Use the count method to count the number of chapters but only in the first 1000 characters of the text\n",
     "# Note: There are 24 chapters \n",
     "# Note: Use slicing to get the first 1000 characters\n",
-    "\n",
+    "print(fixed_texted[:1000].count(\"Chapter\"))\n",
     "\n",
     "# Try to remove punctuation\n",
     "# Note: Use the replace method to replace punctuation with nothing\n",
     "# Note: Use the lower method to make the text lowercase\n",
     "# Note: Use the split method to split the text into words\n",
     "# remember methods can be chained together like this: text.replace().replace().replace().lower().split()\n",
-    "\n",
     "# How many unique words are in the text?\n",
     "# A unique word is a word that only appears once in the text\n",
     "# Note: Use the set method to get the unique words\n",
     "# Note: Use the len method to get the number of unique words\n",
+    "words_cleaned = fixed_texted.replace(\",\", \"\").replace(\".\", \"\").replace(\";\", \"\").replace(\":\", \"\").replace(\"!\", \"\").replace(\"?\", \"\").replace('\"', \"\").replace(\"(\", \"\").replace(\")\", \"\").replace(\"-\", \"\").replace(\"_\", \"\").lower().split()\n",
     "\n",
+    "unique_words = set(words_cleaned)\n",
+    "print(len(unique_words))\n",
+    "print(unique_words)\n",
     "\n",
+    "unique_words_cleaned = set(words_cleaned)\n",
+    "print(\"Cleaned Words Length: \", len(unique_words_cleaned))\n",
+    "print(unique_words_cleaned)\n",
+    "\n",
+    "unique_words_list = list(unique_words_cleaned)\n",
+    "unique_words_list.count('yeild')\n",
     "\n",
     "\n",
     "# How many times does the word \"monster\" appear in the text?\n",
     "# Note: Use the count method to count the number of times \"monster\" appears in the text\n",
-    "\n",
+    "print(fixed_texted.counted(\"monster\")) \n",
+    "print(\"City Count: \", fixed_texted.count('city'))\n",
     "\n"
    ]
   },
@@ -118,7 +136,16 @@
     "# You might need to install collections using pip (in the terminal type: pip install collections)\n",
     "\n",
     "# Print the top 10 words in the text\n",
-    "\n"
+    "from collections import Counter\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "words=Counter(words_cleaned)\n",
+    "words.most_common(10)\n",
+    "\n",
+    "print(words[:5])\n",
+    "print(words.most_common(5))\n",
+    "\n",
+    "plt.bar(range(len(words)), list(words.values()), align='center')\n"
    ]
   },
   {
@@ -149,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
